<resources>
    <string name="app_name">AP_InstragramClone</string>
    <string name="please_enter_the_name">Please Enter the Name</string>
    <string name="please_enter_the_punch_speed">Please Enter the Punch Speed</string>
    <string name="please_enter_the_punch_power">Please Enter the Punch Power</string>
    <string name="please_enter_the_kick_speed">Please Enter the Kick Speed</string>
    <string name="please_enter_the_kick_power">Please Enter the Kick Power</string>
    <string name="save">Save</string>
    <string name="get_data_from_the_server">Get Data from the Server</string>
    <string name="get_all_data">Get All Data</string>
    <string name="switch_to_another_activity">Switch to another activity</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>